# axio-transport-openai

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/axio_transport_openai/: __init__.py
tests/: test_fetch_models.py  test_openai.py  test_transport_retry.py
