[project]
name = "axio-transport-openai"
version = "0.1.0"
description = "OpenAI-compatible transport for Axio"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = ["axio", "aiohttp>=3.11"]

[project.optional-dependencies]
tui = ["textual>=2.1.0"]

[project.entry-points."axio.transport"]
openai = "axio_transport_openai:OpenAITransport"

[project.entry-points."axio.transport.settings"]
openai = "axio_transport_openai:OpenAISettingsScreen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/axio_transport_openai.py"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "mypy>=1.14", "ruff>=0.9"]
